k8s/base/network_policies/allow-egress-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-postgres
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: customer-processor
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.10.2.0/24
      ports:
        - protocol: TCP
          port: 5432
