k8s/base/network_policies/allow-internal-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-egress
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector: {} # All pods in prod namespace
      ports:
        - protocol: TCP
          port: 5000
        - protocol: TCP
          port: 5001
